# pi-cam-capture

./: .gitignore  Cargo.toml  Cross.toml  README.md  clippy.toml
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yml
docs/: VIVID_TROUBLESHOOTING.md
scripts/: dev-setup.sh  dump-camera-info.sh
src/: device.rs  lib.rs  main.rs  mock.rs  traits.rs  validation.rs
tests/: vivid_integration.rs
