[package]
name = "pi-cam-capture"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Enable integration tests requiring virtual cameras (vivid)
integration = []

[dependencies]
v4l = "0.14"

[dev-dependencies]
cargo-husky = { version = "1", features = ["user-hooks"] }
serial_test = "3"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
# Lint groups
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Denied - these are likely bugs
unwrap_used = "deny"
panic = "deny"
indexing_slicing = "warn"

# Security
lossy_float_literal = "deny"

# Code quality
clone_on_ref_ptr = "warn"
empty_structs_with_brackets = "warn"
format_push_string = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
infinite_loop = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
str_to_string = "warn"
try_err = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"

# Allowed - too noisy or not applicable
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
